--- a/package.json
+++ b/package.json
@@ -15,30 +15,52 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@callstack/react-theme-provider": "^3.0.9",
+    "@expo/metro-config": "^0.19.4",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.9",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "@reactvision/react-viro": "^2.41.6",
+    "@supabase/supabase-js": "^2.46.1",
+    "@tanstack/react-query": "^5.61.0",
+    "axios": "^1.7.7",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "client": "file:",
+    "expo": ">=52.0.0-0 <53.0.0",
+    "expo-asset": "~11.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
+    "expo-gl": "~15.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "^16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.7",
+    "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.12",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.3",
+    "expo-three": "^8.0.0",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.4"
+    "react-native-webview": "13.12.4",
+    "three": "^0.170.0",
+    "use-latest-callback": "^0.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
